feat: add dotJosn button and update about me text

--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
             <div id="about-w-img">
                 <section id="about-txt">
                     <p class="about-me">
-                        Comecei minha jornada na programação em 2023, quando ingressei na
-                        faculdade de Eng. de Software no UniSenai, de lá pra cá venho me
-                        apaixonando cada vez mais pela programação.
+                        Minha jornada na programação começou em 2023, quando iniciei o curso de Engenharia de Software no UniSenai. 
+                        Desde então, venho me dedicando ao desenvolvimento contínuo das minhas habilidades. 
+                        Faço parte de uma equipe de desenvolvimento dentro da faculdade chamada JOSN, onde realizamos projetos semestrais e outros trabalhos em conjunto.
                     </p>
                     <br>
                     <p class="about-me">
-                        Atualmente, além da faculdade, estou estudando linguagens/frameworks
-                        como: JavaScript, TypeScript, React entre outras tecnologias
-                        que uso para a criar aplicações web/mobile.
+                        Atualmente, além da graduação, estou aprofundando meus estudos em linguagens e frameworks como JavaScript, TypeScript, React, 
+                        entre outras tecnologias voltadas ao desenvolvimento de aplicações web e mobile.
                     </p>
                     <br>
                     <p class="about-me">
-                        Meu foco é aprender novas coisas e aprimorar ainda mais as habilidade
-                        que possuo, gosto sempre de estar em constante aprendizado e evoluindo
-                        dia após dia.
+                        Meu foco é estar em constante evolução, sempre buscando aprender coisas novas e aperfeiçoar minhas habilidades. 
+                        Gosto de enfrentar desafios e acredito que o aprendizado contínuo é essencial para o crescimento pessoal e profissional.
                     </p>
+                    
+                    
 
                 </section>
                 <img id="about-img" src="src/img/me.png" alt="Foto de Gustavo Pampu" loading="lazy">
@@ -47,6 +47,10 @@
                 <a href="https://www.linkedin.com/in/gustavo-pampu-90b23b268/" class="btn linkedin-btn" target="_blank" rel="noopener noreferrer">
                     <span class="linkedin-btn-img"></span>
                     <p>Linkedin</p>
+                </a>
+                <a href="https://github.com/orgs/dotJosn/repositories" class="btn" target="_blank" rel="noopener noreferrer">
+                    <span class="dotJosn-btn-img"></span>
+                    <p>dotJosn</p>
                 </a>
             </div>
         </div>
